--- a/YcceMechProj/WebContent/app/home/experimentsHome.html
+++ b/YcceMechProj/WebContent/app/home/experimentsHome.html
@@ -3,6 +3,6 @@
 	     <a class="nav-link" ui-sref="{{item.expAdd}}" ng-click="showExpList =! showExpList">{{item.expName}}</a>
 	   </li>
 	   <li class="nav-item">
-	     <a class="nav-link disabled" ui-sref="/">Disabled</a>
+	     <a class="nav-link disabled" ui-sref="/">Disabled HOME</a>
 	   </li>
 	</ul>
