--- a/YcceMechProj/WebContent/app/home/experimentsMain.html
+++ b/YcceMechProj/WebContent/app/home/experimentsMain.html
@@ -1,18 +1,18 @@
 <!-- <h1>EXPERIMENTS</h1> -->
 
 <div>
-	<ul ng-if="!showExpList" class="breadcrumb">
-		<li class="breadcrumb-item"><a href="#!experiments">Experiments</a></li>
-	    <li class="breadcrumb-item active">Rome</li>
+	<ul ng-show="!showExpList" class="breadcrumb">
+		<li class="breadcrumb-item"><a ui-sref="experiments">Experiments</a></li>
+	    <li class="breadcrumb-item active">Experiment 1</li>
 	</ul>
 	  
-    <ul class="nav flex-column">
+    <ul ng-show="showExpList" class="nav flex-column">
 	   <li ng-repeat="item in experimentsList" class="nav-item">
-	     <a class="nav-link" ui-sref="{{item.expAdd}}" ng-click="showExpList =! showExpList">{{item.expName}}</a>
+	     <a class="nav-link" ui-sref="{{item.expAdd}}" ng-click="showExperiment()">{{item.expName}}</a>
 	   </li>
 	   <li class="nav-item">
 	     <a class="nav-link disabled" ui-sref="/">Disabled</a>
 	   </li>
 	</ul>
-	<div ui-view class="fade"></div>
+	<div ui-view class="fade2"></div>
 </div>
