--- a/YcceMechProj/WebContent/app/home/experimentsMain.html
+++ b/YcceMechProj/WebContent/app/home/experimentsMain.html
@@ -2,7 +2,7 @@
 
 <div>
 	<!-- <ul ng-show="!showExpList" class="breadcrumb">
-		<li class="breadcrumb-item"><a ui-sref="experiments">Experiments</a></li>
+		<li class="breadcrumb-item"><a ui-sref="experiments">{{breadcrumb.Main}}</a></li>
 	    <li class="breadcrumb-item active" >Experiment 1</li>
 	</ul> -->
 	  
