--- a/YcceMechProj/WebContent/app/home/experiments/experiments1.html
+++ b/YcceMechProj/WebContent/app/home/experiments/experiments1.html
@@ -2,4 +2,57 @@
 	<li class="breadcrumb-item"><a ui-sref="experiments">Experiments</a></li>
     <li class="breadcrumb-item active" >Scope of metrology laboratory and introduction of all metrological hand instruments and precision measuring instruments</li>
 </ul>
-<h1>EXPERIMENTS 1</h1>
+<ul class="nav nav-tabs font-size-75" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" data-target="#details">Details</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" data-target="#apparatus">Apparatus</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" data-target="#diagram">Diagram</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" data-target="#simulation">Simulation</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" data-target="#objectiveQuestion">Objective Question</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" data-target="#calculation">Calculation</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" data-target="#application">Application</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" data-target="#reference">Reference</a>
+    </li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div id="details" class="container tab-pane active"><br>
+      <h3>Details</h3>
+    </div>
+    <div id="apparatus" class="container tab-pane fade"><br>
+      <h3>Apparatus</h3>
+    </div>
+    <div id="diagram" class="container tab-pane fade"><br>
+      <h3>Diagram</h3>
+    </div>
+    <div id="simulation" class="container tab-pane fade"><br>
+      <h3>Simulation</h3>
+    </div>
+    <div id="objectiveQuestion" class="container tab-pane fade"><br>
+      <h3>Objective Question</h3>
+    </div>
+    <div id="calculation" class="container tab-pane fade"><br>
+      <h3>Calculation</h3>
+    </div>
+    <div id="application" class="container tab-pane fade"><br>
+      <h3>Application</h3>
+    </div>
+    <div id="reference" class="container tab-pane fade"><br>
+      <h3>Reference</h3>
+    </div>
+  </div>
