--- a/YcceMechProj/WebContent/app/global/index.html
+++ b/YcceMechProj/WebContent/app/global/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="icon" ui-sref="home" type="image/png">
+		<link rel="icon" href="./assets/images/favicon.ico" type="image/png">
 			<title>Project</title>
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge" />
