--- a/YcceMechProj/WebContent/app/home/experiments/experiments1.html
+++ b/YcceMechProj/WebContent/app/home/experiments/experiments1.html
@@ -2,57 +2,61 @@
 	<li class="breadcrumb-item"><a ui-sref="experiments">Experiments</a></li>
     <li class="breadcrumb-item active" >Scope of metrology laboratory and introduction of all metrological hand instruments and precision measuring instruments</li>
 </ul>
-<ul class="nav nav-tabs font-size-75" role="tablist">
+<ul class="nav nav-tabs font-size-75" role="tablist"> 
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" data-target="#details">Details</a>
+      <a class="nav-link active cursor-pointer" data-toggle="tab" data-target="#details">Details</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" data-target="#apparatus">Apparatus</a>
+      <a class="nav-link cursor-pointer" data-toggle="tab" data-target="#apparatus">Apparatus</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" data-target="#diagram">Diagram</a>
+      <a class="nav-link cursor-pointer" data-toggle="tab" data-target="#diagram">Diagram</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" data-target="#simulation">Simulation</a>
+      <a class="nav-link cursor-pointer" data-toggle="tab" data-target="#simulation">Simulation</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" data-target="#objectiveQuestion">Objective Question</a>
+      <a class="nav-link cursor-pointer" data-toggle="tab" data-target="#objectiveQuestion">Objective Question</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" data-target="#calculation">Calculation</a>
+      <a class="nav-link cursor-pointer" data-toggle="tab" data-target="#calculation">Calculation</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" data-target="#application">Application</a>
+      <a class="nav-link cursor-pointer" data-toggle="tab" data-target="#application">Application</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" data-target="#reference">Reference</a>
+      <a class="nav-link cursor-pointer" data-toggle="tab" data-target="#reference">Reference</a>
     </li>
   </ul>
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div id="details" class="container tab-pane active"><br>
+    <div id="details" class="tab-pane active"><br>
       <h3>Details</h3>
     </div>
-    <div id="apparatus" class="container tab-pane fade"><br>
+    <div id="apparatus" class="tab-pane fade"><br>
       <h3>Apparatus</h3>
     </div>
-    <div id="diagram" class="container tab-pane fade"><br>
+    <div id="diagram" class="tab-pane fade"><br>
       <h3>Diagram</h3>
     </div>
-    <div id="simulation" class="container tab-pane fade"><br>
-      <h3>Simulation</h3>
+    <div id="simulation" class="tab-pane fade"><br>
+		<h3>Simulation</h3>
+		<video  controls>
+		  <source src="./assets/video/SimulationExp1.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
     </div>
-    <div id="objectiveQuestion" class="container tab-pane fade"><br>
+    <div id="objectiveQuestion" class="tab-pane fade"><br>
       <h3>Objective Question</h3>
     </div>
-    <div id="calculation" class="container tab-pane fade"><br>
+    <div id="calculation" class="tab-pane fade"><br>
       <h3>Calculation</h3>
     </div>
-    <div id="application" class="container tab-pane fade"><br>
+    <div id="application" class="tab-pane fade"><br>
       <h3>Application</h3>
     </div>
-    <div id="reference" class="container tab-pane fade"><br>
+    <div id="reference" class="tab-pane fade"><br>
       <h3>Reference</h3>
     </div>
   </div>
