--- a/YcceMechProj/WebContent/app/global/index.html
+++ b/YcceMechProj/WebContent/app/global/index.html
@@ -99,19 +99,20 @@
 									</ul>
 								</div> 
 							</nav>
+							<ui-view class="fade container-fluid padding-0">
+								<p class="text-center">
+									<b class="opacity-5">
+										Loading.........
+									</b>
+									<i class="fa fa-spinner fa-spin"></i>
+								</p>
+							</ui-view>
 					</div>
 				</div>
 			</div>
 		</div>
 		
-		<ui-view class="fade container-fluid ">
-			<p class="text-center">
-				<b class="opacity-5">
-					Loading.........
-				</b>
-				<i class="fa fa-spinner fa-spin"></i>
-			</p>
-		</ui-view>
+		
 	</div>
 </body>
 </html>
