--- a/YcceMechProj/WebContent/app/home/experiments/experiments3.html
+++ b/YcceMechProj/WebContent/app/home/experiments/experiments3.html
@@ -42,7 +42,7 @@
     </div>
     <div id="simulation" class="tab-pane fade"><br>
 		<h3>Simulation</h3>
-		<video  controls>
+		<video class="max-width-100" controls>
 		  <source src="./assets/video/SimulationExp1.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
