--- a/YcceMechProj/WebContent/app/home/aboutUs.html
+++ b/YcceMechProj/WebContent/app/home/aboutUs.html
@@ -1,1 +1,14 @@
-<h1>ABOUT US</h1>
+<!-- <h1>ABOUT US</h1> -->
+<div>
+	<br>
+	<h5>About the Mechanical Engineering Department :</h5>
+	<div>
+		<p class="text-center">Image(Photo of Mechanical Building)</p>
+		<p>The Department of Mechanical Engineering is established in the year 1986 and tied to complete the following vision and mission.</p>
+		<h6> Vision of the Department : </h6>
+		<p>"To become an attractive destination for perusing mechanical engineering with emphasis on innovation, research and value based education."</p>
+		<h6> Mission of the Department :</h6>
+		<p>"To evolve mechanical engineering professionals through creative teaching, project based learning and research in a stimulating environment."</p>
+		
+	</div>
+</div>
