--- a/YcceMechProj/WebContent/app/home/apparatusUsed.html
+++ b/YcceMechProj/WebContent/app/home/apparatusUsed.html
@@ -1,1 +1,43 @@
-<h1>APPARATUS USED</h1>
+<!-- <h1>APPARATUS USED</h1> -->
+
+<div>
+	<br>
+	<h5>The subject Metrology and Quality Control includes the following measuring instruments :</h5>
+	<div>
+		<h6>
+			Non-Precision Instruments -
+		</h6>
+		<ol>
+			<li>Steel Rule</li>
+			<li>Outside Calipers</li>
+			<li>Inside Calipers</li>
+			<li>Surface Plate</li>
+			<li>Angle Plate</li>
+			<li>Combination set</li>
+		</ol>
+	</div>
+	<div>
+		<h6>
+			Precision Measuring Instruments -
+		</h6>
+		<ol>
+			<li>Vernier Caliper</li>
+			<li>Vernier Depth Gauge</li>
+			<li>Vernier Height Gauge</li>
+			<li>Outside Micrometers</li>
+			<li>Inside Micrometers</li>
+			<li>Dial Micrometers</li>
+			<li>Bevel Protractor</li>
+			<li>Sine Bars</li>
+			<li>Optical Protractor</li>
+			<li>Dial Indicator</li>
+			<li>Mechanical Comparator</li>
+			<li>Straight Edge</li>
+			<li>Spirit Level</li>
+			<li>Slip Gauges</li>
+			<li>Screw Thread Micrometers</li>
+			<li>Screw Pitch Gauge</li>
+			<li>Thread Measuring Wires</li>
+		</ol>
+	</div>
+</div>
