--- a/YcceMechProj/WebContent/app/home/applications.html
+++ b/YcceMechProj/WebContent/app/home/applications.html
@@ -1,1 +1,13 @@
-<h1>APPLICATIONS</h1>
+<!-- <h1>APPLICATIONS</h1> -->
+<div>
+	<br>
+	<h5>Applications of MQC :</h5>
+	<div>
+		<ol>
+			<li>Performing the work of establishment of units and realization of the standards to the users in the society and the development of new methods in measurement.</li>
+			<li>To establish importance of measurement in industry.</li>
+			<li>To ensure the appropriateness of measurement instruments including the maintenance, quality control and proper calibration of the instruments.</li>
+			<li>To maintain the standard quality of a product by inspecting and correcting the features of product.</li>
+		</ol>
+	</div>
+</div>
