--- a/YcceMechProj/WebContent/app/home/contributers.html
+++ b/YcceMechProj/WebContent/app/home/contributers.html
@@ -1,1 +1,21 @@
-<h1>CONTRIBUTERS</h1>
+<!-- <h1>CONTRIBUTERS</h1> -->
+<div>
+	<br>
+	<h5>The Concept of this website is designed and developed under the guidance of Dr. P. D. Kamble Sir by the following students :</h5>
+	<div>
+		<ol>
+			<li>Pratik Salve </li>
+			<li>Rupesh Chaudhary</li>
+			<li>Sarvesh Nandankar</li>
+			<li>Pravin Dhakite</li>
+			<li>Rushikesh Patil</li>
+			<li>Rushikesh Shinde</li>
+			<li>Sanidhya Kapse</li>
+			<li>Sanskar Nagpurkar</li>
+			<li>Shardul Deshpane</li>
+		</ol>
+	</div>
+	<div class="text-center">
+		<p>The website is dedicated to help the emerging students of Mechanical Engineering Department.</p>
+	</div>
+</div>
