--- a/YcceMechProj/WebContent/app/home/experiments/experiments3.html
+++ b/YcceMechProj/WebContent/app/home/experiments/experiments3.html
@@ -32,7 +32,32 @@
   <!-- Tab panes -->
   <div class="tab-content">
     <div id="details" class="tab-pane active"><br>
-      <h3>Details</h3>
+      <!-- <h3>Details</h3> -->
+		<div>
+			<h5>Sine Bar :</h5>
+			<div>
+				<p>A sine bar consists of a hardened, precision ground body with
+					two precision ground cylinders fixed at the ends. The distance
+					between the centers of the cylinders is precisely controlled, and
+					the top of the bar is parallel to a line through the centers of the
+					two rollers. The dimension between the two rollers is chosen to be
+					a whole number (for ease of later calculations) and forms the
+					hypotenuse of a triangle when in use.</p>
+				<p>When a sine bar is placed on a level surface the top edge
+					will be parallel to that surface. If one roller is raised by a
+					known distance, usually using gauge blocks, then the top edge of
+					the bar will be tilted by the same amount forming an angle that may
+					be calculated by the application of the sine rule.</p>
+				<p>The hypotenuse is a constant dimension - (100 mm or 10 inches in the examples shown).</p>
+				<p>The height is obtained from the dimension between the bottom of one roller and the table's surface.</p>
+				<p>The angle is calculated by using the sine rule. Some
+					engineering and metalworking reference books contain tables showing
+					the dimension required to obtain an angle from 0-90 degrees,
+					incremented by 1 minute intervals.</p>
+				<h6>Sin(angle) = Perpendicular/Hypotenuse</h6>
+				<p>Angles may be measured or set with this tool.</p>
+			</div>
+		</div>
     </div>
     <div id="apparatus" class="tab-pane fade"><br>
       <h3>Apparatus</h3>
@@ -41,22 +66,190 @@
       <h3>Diagram</h3>
     </div>
     <div id="simulation" class="tab-pane fade"><br>
-		<h3>Simulation</h3>
+		<!-- <h3>Simulation</h3> -->
 		<video class="max-width-100" controls>
 		  <source src="./assets/video/SimulationExp1.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
     </div>
     <div id="objectiveQuestion" class="tab-pane fade"><br>
-      <h3>Objective Question</h3>
+      <!-- <h3>Objective Question</h3> -->
+		<div>
+			<br>
+			<h5>Multiple Choice Questions (MCQ) :</h5>
+			<div>
+				<ol>
+					<li>Up to which angle sine bars can measure the angles?
+						<ol type="a">
+							<li><b>45 degree</b></li>
+							<li>60 degree</li>
+							<li>90 degree</li>
+							<li>120 degree</li>
+						</ol>
+					</li>
+					<br>
+					<li>What is the permissible tolerance on flatness of side faces of sine bars of 100 mm as per IS 5359-1969?
+						<ol	type="a">
+							<li>0.001 mm</li>
+							<li><b>0.005 mm</b></li>
+							<li>0.01 mm</li>
+							<li>0.05 mm</li>
+						</ol>
+					</li>
+					<br>
+					<li>Which of the following is not used in making of sine bars?
+						<ol type="a">
+							<li>High carbon</li>
+							<li>High chromium</li>
+							<li>Corrosion resistant steel</li>
+							<li><b>Aluminium</b></li>
+						</ol>
+					</li>
+					<br>
+					<li>Which of the distance of the axes of two cylinders of sine bar?
+						<ol type="a">
+							<li>20 inches</li>
+							<li>50 inches</li>
+							<li><b>5 inches</b></li>
+							<li>25 inches</li>
+						</ol>
+					</li>
+					<br>
+					<li>Which of the following is incorrect regarding sine bars?
+						<ol type="a">
+							<li><b>Sine bar is itself a complete measuring instrument</b></li>
+							<li>Some holes are drilled in the body</li>
+							<li>It can be used to locate any work to a given angle</li>
+							<li>It is capable of self generation</li>
+						</ol>
+					</li>
+					<br>
+					<li>What are the characteristics permissible tolerance flatness of upper and lower surface of 100mm sine bar I.S. 5359—1969?
+						<ol type="a">
+							<li><b>0.001mm</b></li>
+							<li>0.01mm</li>
+							<li>0.005mm</li>
+							<li>0.05mm</li>
+						</ol>
+					</li>
+					<br>
+					<li>Which of the following is true for the given statements about sine bars?
+						<p>Statement 1: Grade A sine bars are less accurate than grade B.
+						<br>Statement 2: Grade B sine bars are accurate up to 0.01 mm/m of length.</p>
+						<ol type="a">
+							<li>1. True, 2. False</li>
+							<li>1. True, 2. False</li>
+							<li>1. False, 2. False</li>
+							<li><b>1. False, 2. False</b></li>
+						</ol>
+					</li>
+					<br>
+					<li>What is the parallelism tolerance of end faces of axes of rollers in sine bar according to British Standards?
+						<ol type="a">
+							<li>0.013mm per 50mm</li>
+							<li>0.01mm per 25mm</li>
+							<li><b>0.013mm per 25mm</b></li>
+							<li>0.13mm per 25mm</li>
+						</ol>
+					</li>
+					<br>
+					<li>What is sine centre?
+						<ol	type="a">
+							<li>Centre of sine bar</li>
+							<li><b>Sine bar with block holding centres</b></li>
+							<li>Sine bar with block holding centre</li>
+							<li>Sine bar with hollow rod in centre</li>
+						</ol>
+					</li>
+					<br>
+					<li>As per IS 5359-1969, what is the permissible tolerance on mean diameter of the rollers in 100mm sine bars?
+						<ol type="a">
+							<li>0.005 mm</li>
+							<li>0.001 mm</li>
+							<li><b>0.002 mm</b></li>
+							<li>0.01 mm</li>
+						</ol>
+					</li>
+					<br>
+					<li>Which of the following is true for sine table?
+						<ol type="a">
+							<li>Sine table is most convenient for the light workpieces</li>
+							<li>Procedure of setting angle is not same as sine bars</li>
+							<li><b>Table may be safely swung from 0 to 90 degrees</b></li>
+							<li>Error caused by clamping mechanism is very large</li>
+						</ol>
+					</li>
+					<br>
+					<li>Upto which inclination sine centres can be used?
+						<ol type="a">
+							<li>45 degree</li>
+							<li>90 degree</li>
+							<li>90 degree</li>
+							<li><b>60 degree</b></li>
+						</ol>
+					</li>
+					<br>
+					<li>Sine Bars are available depend upon their following specification
+						<ol type="a">
+							<li>No. of holes on the body</li>
+							<li><b>Distance between the centres of the rollars</b></li>
+							<li>Angle</li>
+							<li>No. of slip gauges required</li>
+						</ol>
+					</li>
+					<br>
+					<li>Holes are provided on sine bar
+						<ol type="a">
+							<li>To adjust the balance</li>
+							<li>To recognize type of sine bar</li>
+							<li>To change the angle of sine bar</li>
+							<li><b>To change the angle of sine bar</b></li>
+						</ol>
+					</li>
+					<br>
+					<li>Sine Bar can not be used with following
+						<ol type="a">
+							<li><b>spirit level</b></li>
+							<li>slip gauges</li>
+							<li>angle gauges </li>
+							<li>Dial gauges</li>
+						</ol>
+					</li>
+					<br>
+				</ol>
+			</div>
+		</div>
     </div>
     <div id="calculation" class="tab-pane fade"><br>
       <h3>Calculation</h3>
     </div>
     <div id="application" class="tab-pane fade"><br>
-      <h3>Application</h3>
+      <!-- <h3>Application</h3> -->
+		<div>
+			<h5>Applications :</h5>
+			<div>
+				<ol>
+					<li>Sine-bar is used to set or locate the workpiece at a given angle.</li>
+					<li>To check the measuring of unknown angles in the workpiece.</li>
+					<li>To Check the unknown angles on the heavier components.</li>
+					<li>Some specially designed Sine bars are used to mount the workpiece to do the conical shape machining for the workpiece.</li>
+				</ol>
+			</div>
+		</div>
     </div>
     <div id="reference" class="tab-pane fade"><br>
-      <h3>Reference</h3>
+      <!-- <h3>Reference</h3> -->
+		<div>
+			<h5>References :</h5>
+			<div>
+				<ol>
+					<li>A Text Book of Engineering Metrology :- R. K. Jain</li>
+					<li>Statistical Quality Control :- Mahajan M</li>
+					<li>Engineering Metrology :- I. C. Gupta</li>
+					<li>Metrology for Engineers :- John Frederick wise Galyer, Charles Reginald Shotbolt</li>
+					<li>Internet</li>
+				</ol>
+			</div>
+		</div>
     </div>
   </div>
