--- a/YcceMechProj/WebContent/app/home/home.html
+++ b/YcceMechProj/WebContent/app/home/home.html
@@ -1,1 +1,28 @@
-<h1>HOME</h1>
+<!-- <h1>HOME</h1> -->
+<div>
+	<br>
+	<div class="text-center">
+		<h5>Metrology & Quality Control (MQC) is the subject concern with study of various measuring instruments and their applications in the
+		industry as well as study of different quality control techniques.</h5>
+	</div>
+	<br>
+	<div>
+		<h6>
+			Study of MQC is needed -
+		</h6>
+		<ol>
+			<li>To emphasis the need of metrological instrument and its role in quality control.</li>
+			<li>To enable the students to take up metrology work in industries and using latest metrological equipments.</li>
+			<li>To impart knowledge of tolerance chart & quality control techniques.</li>
+		</ol>
+	</div>
+	<div>
+		<h6>
+			After Studying the subject students will get -
+		</h6>
+		<ol>
+			<li>Ability to select and use metrological instruments.</li>
+			<li>Ability to apply acceptance sampling techniques and prepare tolerance chart.</li>
+		</ol>
+	</div>
+</div>
