--- a/YcceMechProj/WebContent/app/global/index.html
+++ b/YcceMechProj/WebContent/app/global/index.html
@@ -40,12 +40,13 @@
 						<div class="col-xs-12">
 							<div class="header_inner">
 								<!-- Brand and toggle get grouped for better mobile display -->
-								<div class="navbar-header col-md-12" style="text-align: center;">
+								<div class="navbar-header col-md-12 text-center">
 									<a class="logo_d logo clearfix" ui-sref="home">
 										<img src="assets/images/ycce_l.png" alt="logo" class="img-fluid  img-responsive">
 									</a>
 									<a class="logo_m logo clearfix" ui-sref="home" style="text-align: center;">
-										<img src="assets/images/logo_mobile.png" alt="YCCE-logo" class="img-fluid  img-responsive"></a>
+										<img width="150" src="assets/images/logo_mobile.png" alt="YCCE-logo" class="img-fluid  img-responsive"></a>
+									<h5>Mechanical Department - Meterology and Qualtiy Control</h5>
 								</div>
 							</div>
 						</div>
@@ -54,12 +55,11 @@
 		<!-- 	</h1> -->
 			</div>
 			<div class="container-fluid">
-			<br>
 				<div class="row">
-					<div class="sidenav col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2 text-center">
+					<div class="sidenav col-sm-3 col-md-2 col-lg-2 col-xl-2 text-center home-none">
 					  <a ui-sref="home">Home</a>
 					</div>
-					<div class="main col-8 col-sm-9 col-md-10 col-lg-10 col-xl-10">
+					<div class="main col-12 col-sm-12 col-md-10 col-lg-10 col-xl-10">
 					  <!-- NAVBAR -->
 							<!-- class: bg-dark -->
 							<nav class="navbar navbar-expand-md navbar-light sticky-top bg-dark">
@@ -70,6 +70,9 @@
 								<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 									<span class="navbar-toggler-icon"></span>
 								</button> -->
+								<div >
+									<a class="home" ui-sref="home">Home</a>
+								</div>
 								<div class="container-menu-button navbar-toggler margin-left-auto" data-toggle="collapse" data-target="#collapsibleNavbar" ng-class="{'change':isChangeActive}" ng-click="myFunction()">
 									<div class="bar1"></div>
 									<div class="bar2"></div>
