--- a/YcceMechProj/WebContent/app/home/experiments/experiments3.html
+++ b/YcceMechProj/WebContent/app/home/experiments/experiments3.html
@@ -59,11 +59,62 @@
 			</div>
 		</div>
     </div>
-    <div id="apparatus" class="tab-pane fade"><br>
-      <h3>Apparatus</h3>
+    <div id="apparatus" class="tab-pane fade">
+    	<br>
+		<h5>Apparatus : <small>Surface plate, Sine bar, Slip gauges, V-Block, Work piece, Dial indicator.</small></h5>
+		<br>
+		<div class="text-center">
+      		<div class="row border">
+      			<div class="col">
+      				<h5 class="clearfix">SINE BAR</h5>
+	      			<small>The sine bar is the most accurate instrument for measuring angles. It consists of a accurate straight
+						rectangular bar made of high quality steel and having two accurately lapped cylindrical plugs or rollers at the ends.
+					</small>
+	      		</div>
+	      		<div class="col"><img alt="SINE BAR" src="./assets/images/SINE_BAR.png"  width="170" height="170"></div>
+      		</div>
+			<div class="row border">
+      			<div class="col">
+      				<h5 class="clearfix">SLIP GAUGE</h5>
+	      			<small>Slip Gauges are known as Gauge Blocks. They are Precise Measuring instruments. These Slip Gaugesare universally accepted end 
+      					Standard of length. You know, Johanson first introduced the slip gauges, so they can be called as Johanson gauges as well.
+					</small>
+	      		</div>
+	      		<div class="col"><img alt="SLIP GAUGE" src="./assets/images/SLIP_GAUGE.png"  height="170"></div>
+      		</div>
+			<div class="row border">
+      			<div class="col">
+      				<h5 class="clearfix">SURFACE PLATE</h5>
+	      			<small>A surface plate is a solid, flat plate used as the main horizontal reference plane for precision inspection, 
+						marking out (layout), and tooling setup.
+					</small>
+	      		</div>
+	      		<div class="col"><img alt="SURFACE PLATE" src="./assets/images/SURFACE_PLATE.png" width="170" height="170"></div>
+      		</div>
+			<div class="row border">
+      			<div class="col">
+      				<h5 class="clearfix">V-BLOCK</h5>
+	      			<small>A V-block is a square or rectangular precision-made block used to securely hold a cylindrical workpiece on a 
+		      			milling machine or drill press. They are called V-blocks because they have at least one centrally located v-shaped 
+		   				groove upon which parts are positioned.
+					</small>
+	      		</div>
+	      		<div class="col"><img alt="V-BLOCK" src="./assets/images/V_BLOCK.png" width="170" height="170"></div>
+      		</div>
+			<div class="row border">
+      			<div class="col">
+      				<h5 class="clearfix">DIAL INDICATOR</h5>
+	      			<small>Dial indicators are instruments used for making and checking linear measurements.</small>
+	      		</div>
+	      		<div class="col"><img alt="DIAL INDICATOR" src="./assets/images/DIAL_INDICATOR.png" width="170" ></div>
+      		</div>
+      </div>
     </div>
     <div id="diagram" class="tab-pane fade"><br>
-      <h3>Diagram</h3>
+      <!-- <h3>Diagram</h3> -->
+      <div><img class="img-border" alt="DIAL INDICATOR" src="./assets/images/Image1.jpeg"></div><br><br>
+      <div><img class="img-border" alt="DIAL INDICATOR" src="./assets/images/Image2.jpeg"></div><br><br>
+      <div><img class="img-border" alt="DIAL INDICATOR" src="./assets/images/Image3.jpeg"></div>
     </div>
     <div id="simulation" class="tab-pane fade"><br>
 		<!-- <h3>Simulation</h3> -->
