--- a/YcceMechProj/WebContent/app/global/index.html
+++ b/YcceMechProj/WebContent/app/global/index.html
@@ -79,25 +79,25 @@
 									<div class="bar3"></div>
 								</div>
 								<!-- Navbar links -->
-								<div class="collapse navbar-collapse" id="collapsibleNavbar" ng-click="myFunction()">
+								<div class="collapse navbar-collapse" id="collapsibleNavbar">
 									<ul class="navbar-nav "><!-- margin-left-auto -->
 										<li class="nav-item">
-											<a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Experiment' }" ui-sref="experiments">Experiment</a>
+											<a ng-click="myFunction()" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Experiment' }" ui-sref="experiments">Experiment</a>
 										</li>
 										<li class="nav-item">
-											<a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Apparatus Used' }" ui-sref="apparatusUsed">Apparatus Used</a>
+											<a ng-click="myFunction()" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Apparatus Used' }" ui-sref="apparatusUsed">Apparatus Used</a>
 										</li>
 										<li class="nav-item">
-											<a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Applications' }" ui-sref="applications">Applications</a>
+											<a ng-click="myFunction()" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Applications' }" ui-sref="applications">Applications</a>
 										</li>
 										<li class="nav-item">
-											<a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Feedback' }" ui-sref="feedback">Feedback</a>
+											<a ng-click="myFunction()" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Feedback' }" ui-sref="feedback">Feedback</a>
 										</li>
 										<li class="nav-item">
-											<a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Contributers' }" ui-sref="contributers">Contributers</a>
+											<a ng-click="myFunction()" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'Contributers' }" ui-sref="contributers">Contributers</a>
 										</li>
 										<li class="nav-item">
-											<a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'About Us' }" ui-sref="aboutUs">About Us</a>
+											<a ng-click="myFunction()" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link" ng-class="{'activeMenu' : activeMenu == 'About Us' }" ui-sref="aboutUs">About Us</a>
 										</li>
 									</ul>
 								</div> 
